--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,9 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Kumbh Sans', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
+  
 
 /* NAVBAR CSS */
 
@@ -11,11 +12,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: black;
+  background: #F5E2E2;
   height: 100px;
   font-size: 18px;
   position: sticky;
-  top: 0;
   z-index: 999;
 }
 
@@ -28,17 +28,20 @@
   max-width: 1300px;
   margin: 0 auto;
   padding: 0;
-  z-index: 1;
+  border-bottom-style: solid;
 }
 
 #navbar_logo {
   display: flex;
   align-items: center;
-  color: #bf475d;
+  color: black;
   cursor: pointer;
   text-decoration: none;
   font-size: 32px;
-  padding-left: 20px;
+  padding: 20px;
+}
+#navbar_logo:hover{
+  color:#bf4040;
 }
 
 .navbar_menu {
@@ -57,64 +60,44 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #f1e3e4;
+  color: black;
   text-decoration: none;
   padding: 0 20px;
   height: 100%;
 }
 
-.button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  padding: 10px 20px;
-  height: 100%;
-  width: 100%;
-  border: none;
-  outline: none;
-  border-radius: 4px;
-  background: #bf475d;
-  color: #f1e3e4;
-}
-
-.button:hover {
-  background: #d895a1;
-  color: black;
-  transition: all 0.3s ease;
-}
-
 .navbar_links:hover {
-  color: #bf475d;
+  color: #bf4040;
   transition: all 0.3s ease;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 450px) {
   .navbar_container {
     height: 80px;
+    border-bottom-style: solid;
   }
 
   .navbar_menu {
-    display: grid;
+    display:block;
     grid-template-columns: auto;
     margin: 0;
     width: 100%;
     height: 50vh;
     position: absolute;
-    top: -100px;
+    top: -90px;
     opacity: 0;
     transition: all 0.5s ease;
     z-index: -1;
-    background: black;
+    background: #F5E2E2;
   }
 
   .navbar_menu.active {
-    background: black;
+    background:#F5E2E2;
     top: 100%;
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 99;
-    height: 80vh;
+    height: 60vh;
     font-size: 25;
   }
 
@@ -127,7 +110,7 @@
     height: 3px;
     margin: 5px auto;
     transition: all 0.3s ease-in-out;
-    background: #f1e3e4;
+    background: black;
   }
 
   .navbar_item {
@@ -135,10 +118,14 @@
   }
 
   .navbar_links {
-    display: table;
     text-align: center;
     padding: 32px;
     width: 100%;
+  }
+
+  .navbar_links:hover{
+    background-color: #bf4040;
+    color:#F5E2E2;
   }
 
   #mobile-menu {
@@ -146,17 +133,6 @@
     top: 20%;
     right: 5%;
     transform: translate(5%, 20%);
-  }
-
-  .navbar_button {
-    padding-bottom: 32px;
-    justify-self: center;
-  }
-
-  .button {
-    width: 100%;
-    height: 60px;
-    margin: 0;
   }
 
   .navbar_toggle .bar {
@@ -179,47 +155,44 @@
 
 /* Intro CSS */
 .main {
-  background-color: #f1e3e4;
+  background-color: #F5E2E2;
+  overflow-y: auto;
 }
 
 .main_container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   align-items: center;
   justify-self: center;
   margin: 0;
-  height: 90vh;
-  background-color: black;
+  height: 80vh;
   z-index: 1;
   width: 100%;
-  padding: 0;
+  padding: 80px;
 }
 
-.main_content {
-  padding: 0 50px;
-}
-
-.main_content h1, 
-.main_content h2 {
-  font-size: 64px;
-  color: #bf475d;
-  background-color: black;
+.main_content h1 {
+  font-size: 108px;
+  background-color: #bf4040;
+  background-image: linear-gradient(to top, #d92626 0%, #b87a7a 100%);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
 }
 
 .main_content p {
-  font-size: 64px;
-  color: #d895a1;
-  background-color: black;
+  font-size: 68px;
+  color: #CC6565;
 }
 
 .main_button {
-  font-size: 16px;
+  font-size: 24px;
   padding: 10px 20px;
   border: none;
-  outline: none;
   border-radius: 4px;
-  background: #bf475d;
-  color: #f1e3e4;
+  background: #bf4040;
+  color: #F5E2E2;
   cursor: pointer;
   margin-top: 32px;
   position: relative;
@@ -229,12 +202,116 @@
 .main_button a {
   position: relative;
   z-index: 2;
-  color: #f1e3e4;
+  color: #F5E2E2;
   text-decoration: none;
+}
+
+.main_button:after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  width: 0;
+  height: 100%;
+  background: #CC6565;
+  transition: all .5s;
+  border-radius: 4px;
+}
+
+.main_button:hover:after {
+  width: 100%;
 }
 
 .intro_image {
   max-width: 100%;
   height: auto;
+  border-radius: 1000px;
 }
+
+@media screen and (max-width: 450px) {
+  .main_container{
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
+    justify-self: center;
+    width: 100%;
+    margin: 0 auto;
+    height: 90vh;
+  }
+
+  .main_content{
+    text-align: center;
+    margin-bottom: 64px;
+  }
+
+  .main_content h1 {
+    font-size: 38px;
+    margin-top: 32px;
+  }
+
+  .main_content p {
+    font-size: 24px;
+    margin-top: 16px;
+  }
+
+  .main_button {
+    font-size: 16px;
+  }
+  
+}
+
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #F5E2E2;
+  height: 80px;
+  font-size: 18px;
+  position: sticky;
+}
+
+.footer_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  width: 100%;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0;
+  border-top-style: solid;
+  justify-content: center;
+}
+
+.footer_menu {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  text-align: center;
+}
+
+.footer_item {
+  height: 80px;
+  width: 100%;
+}
+
+.footer_links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: black;
+  text-decoration: none;
+  padding: 0 40px;
+  height: 100%;
+}
+
+.footer_links:hover {
+  color: #bf4040;
+  transition: all 0.3s ease;
+}
+
+
+
+
 
